--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-env": "^7.23.2",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
+    "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
     "path": "^0.12.7",
