--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.7",
     "copy-webpack-plugin": "^12.0.2",
     "file-loader": "^6.2.0",
     "webpack": "^5.89.0"
